quick fix for width of the paragraph not to overlap with close button.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -251,7 +251,6 @@ a.breadcrumbs:hover,a.breadcrumbs:active  {
 
 .alert-content {
   width: 90%;
-  min-width: 90%;
 }
 
 /* GENERIC CONTENT TEMPLATE */
